# libsecretary

./: .hgignore  ChangeLog  Makefile  Makefile.am  configure.ac  libsecretary.pc.in  list.c  notebook.c  notrunning.sh  parser.c  project.c  pubsub.c  secretary.c  task.c  util.c
include/: project.h  secretary.h  task.h
include/secretary/: list.h  notebook.h  parser.h  project.h  secretary.h  task.h  util.h
include/secretary/_internal/: secretary.h  task.h
include/secretary/test/: list.h  notebook.h  optimization_requisites.h  parser.h  project.h  secretary.h  task.h  util.h
include/test/: secretary.h
secretary/: list.h  notebook.h  parser.h  project.h  pubsub.h  secretary.h  task.h  util.h
secretary/_internal/: project.h  secretary.h  task.h
secretary/test/: list.h  notebook.h  optimization_requisites.h  project.h  pubsub.h  secretary.h
src/: list.c  notebook.c  parser.c  project.c  secretary.c  task.c  util.c
src/test/: list.c  notebook.c  optimization_requisites.c  parser.c  project.c  run_all.c  secretary.c  task.c  util.c
test/: runtests.c  test_list.c  test_notebook.c  test_optimization_requisites.c  test_parser.c  test_project.c  test_pubsub.c  test_secretary.c  test_task.c  test_util.c
